# billo

./: .env.default  .gitignore  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.bash
.github/workflows/: cx.yaml
billo/_lib/logging/: __init__.py  _mod.py
docker/: richy.Dockerfile
richy/_lib/constants/: __init__.py  _mod.py
richy/_lib/downloading/: __init__.py  _mod.py
scripts/: compose.yaml
tests/: cli_test.py
